--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-# oTree-may-overwrite-this-file
-# IF YOU MODIFY THIS FILE, remove this comment.
-# otherwise, oTree will automatically overwrite it.
-otree==3.4.0
-psycopg2>=2.8.4
+aiofiles==0.6.0
+asgiref==3.2.7
+backports.zoneinfo==0.2.1
+click==7.1.2
+h11==0.13.0
+itsdangerous==1.1.0
+jsonfield==3.1.0
+MarkupSafe==1.1.1
+otree==5.8.0
+python-multipart==0.0.5
+six==1.16.0
+SQLAlchemy==1.3.22
+sqlparse==0.4.2
+starlette==0.14.1
+uvicorn==0.13.4
+websockets==10.1
+WTForms==2.3.3
+WTForms-SQLAlchemy==0.2
