--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==0.6.0
 asgiref==3.2.7
 backports.zoneinfo==0.2.1
 click==7.1.2
+Django==4.0.5
 h11==0.13.0
 itsdangerous==1.1.0
 jsonfield==3.1.0
